--- a/src/app/GrupoFormularios/Updates/update-post/update-post.component.html
+++ b/src/app/GrupoFormularios/Updates/update-post/update-post.component.html
@@ -1,1 +1,35 @@
-<p>update-post works!</p>
+<div class="row min-vw-100 d-flex justify-content-center">
+  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+</div>
+<div class="row">
+  <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
+</div>
+<!--Formulario-->
+<div class="row mh-50 h-50 d-flex justify-content-center align-center">
+  <div class="col-10 d-flex flex-column justify-content-center">
+    <div>
+      <h3>Editar Publicación</h3>
+    </div>
+    <!--Campos del formulario-->
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
+      <div class="mb-3">
+        <label for="titulo">Título:</label>
+        <input class="form-control" id="titulo" formControlName="titulo" [(ngModel)]="post.titulo" type="text" placeholder="Título..." value="{{ post.titulo }}">
+      </div>
+      <div class="mb-3">
+        <label for="contenido">Contenido:</label>
+        <textarea class="form-control rounded-0" rows="10" id="contenido" formControlName="contenido" [(ngModel)]="post.contenido" placeholder="Contenido..."  value="{{ post.contenido }}"></textarea>
+      </div>
+      <div class="mb-3 d-flex justify-content-between">
+        <button type="submit" class="btn btn-primary">Editar</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
+</div>
+<div class="row">
+  <app-footer class="min-vw-100"></app-footer>
+</div>
