--- a/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-6 d-flex justify-content-end">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" routerLink="/panel/adminAsoc/updateasoc/{{ asoc.id }}" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Editar</button>
+          <button type="button" routerLink="/panel/adminAsoc/updateAsoc/{{ asoc.id }}" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Editar</button>
           <button type="button" class="btn btn-danger">Baja</button>
         </div>
       </div>
@@ -44,7 +44,7 @@
 </div>
 
 <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
-  <a routerLink="/panel/adminUser" class="btn info-btn-usr" type="button">Atrás</a>
+  <a routerLink="/panel/adminAsoc" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
 <div class="row">
