Autocompletado de formularios y updateCanario

--- a/src/app/GrupoFormularios/Updates/update-usuario/update-usuario.component.html
+++ b/src/app/GrupoFormularios/Updates/update-usuario/update-usuario.component.html
@@ -1,1 +1,46 @@
-<p>update-usuario works!</p>
+<div class="row min-vw-100 d-flex justify-content-center">
+  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+</div>
+<div class="row">
+  <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
+</div>
+<!--Formulario-->
+<div class="row mh-50 h-50 d-flex justify-content-center align-center">
+  <div class="col-10 d-flex flex-column justify-content-center">
+    <div>
+      <h3>Editar Usuario</h3>
+    </div>
+    <!--Campos del formulario-->
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
+      <div class="mb-3">
+        <input class="form-control" formControlName="name" [(ngModel)]="user.name" type="text" placeholder="Nombre de moderador..." value="{{ user.name }}">
+      </div>
+      <div class="mb-3">
+        <input class="form-control" formControlName="real_name" [(ngModel)]="user.real_name" type="text" placeholder="Nombre real..."  value="{{ user.real_name }}">
+      </div>
+      <div class="mb-3">
+        <input class="form-control" formControlName="email" [(ngModel)]="user.email" type="text" placeholder="E-mail..."  value="{{ user.email }}">
+      </div>
+      <div class="mb-3">
+        <label for="idAs">ID Asociación:</label>
+        <input class="form-control" id="idAs" formControlName="id_asociacion" [(ngModel)]="user.id_asociacion" type="number" value="{{ user.id_asociacion }}">
+      </div>
+      <div class="mb-3">
+        <input class="form-control" formControlName="password" type="password" placeholder="Contraseña...">
+      </div>
+      <div class="mb-3">
+        <input class="form-control" formControlName="password_confirmation" type="password" placeholder="Confirme la contraseña...">
+      </div>
+      <div class="mb-3 d-flex justify-content-between">
+        <button type="submit" class="btn btn-primary">Editar</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
+</div>
+<div class="row">
+  <app-footer class="min-vw-100"></app-footer>
+</div>
