--- a/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
+++ b/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
@@ -1,1 +1,42 @@
-<p>update-canario works!</p>
+<div class="row min-vw-100 d-flex justify-content-center">
+  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+</div>
+<div class="row">
+  <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
+</div>
+<!--Formulario-->
+<div class="row mh-50 h-50 d-flex justify-content-center align-center">
+  <div class="col-10 d-flex flex-column justify-content-center">
+    <div>
+      <h3>Editar Canario</h3>
+    </div>
+    <!--Campos del formulario-->
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
+      <div class="mb-3">
+        <label for="id_usuario">ID Usuario</label>
+        <select class="form-control custom-select" id="id_usuario" formControlName="id_usuario" [(ngModel)]="canario.id_usuario">
+          <option selected value="{{ canario.id_usuario }}"> {{ canario.id_usuario }} {{nombreUsuario}}</option>
+          <option *ngFor="let usr of usuarios_disponibles" value="{{ usr.id }}"> {{ usr.id }} {{ usr.name }} </option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="sexo">Sexo</label>
+        <select class="form-control custom-select" id="sexo" formControlName="sexo" [(ngModel)]="canario.sexo">
+          <option selected value="{{ canario.sexo }}"> {{ canario.sexo }}</option>
+          <option *ngIf="canario.sexo === 'M'" value="H"> H </option>
+          <option *ngIf="canario.sexo === 'H'" value="M"> M </option>
+        </select>
+      </div>
+      <div class="mb-3 d-flex justify-content-between">
+        <button type="submit" class="btn btn-primary">Editar</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
+</div>
+<div class="row">
+  <app-footer class="min-vw-100"></app-footer>
+</div>
