--- a/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
@@ -1,9 +1,11 @@
 <div class="row min-vw-100 d-flex justify-content-center">
   <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
 </div>
+
 <div class="row">
   <app-info-bar-user class="min-vw-100 d-flex justify-content-center"></app-info-bar-user>
 </div>
+
 <div class="row d-flex justify-content-center">
   <div style="min-width: 85%; max-width: 90%;">
     <div class="container-fluid mt-3">
@@ -58,5 +60,5 @@
 </div>
 
 <div class="row">
-  <app-footer class="min-vw-100"></app-footer>
+  <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
 </div>
