--- a/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
+++ b/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
@@ -14,29 +14,30 @@
       </div>
 
       <!--TABLA-->
-      <div class="row mt-2 mb-2 min-vw-90">
+      <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
 
-        <table class="table table-hover table-bordered">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
           <thead class="table-dark">
             <tr>
               <th scope="col">#ID</th>
-              <th scope="col">Usuario</th>
-              <th scope="col">N. Real</th>
+              <th scope="col">Name</th>
+              <th scope="col">Nombre real</th>
+              <th scope="col">Email</th>
               <th scope="col">ID Asociación</th>
-              <th scope="col">E-Mail</th>
-              <th scope="col" colspan="2">Acciones</th>
+              <th scope="col">Editar</th>
+              <th scope="col">Borrar</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let mod of moderadores">
-              <th style="font-family: monospace;" scope="row"><a routerLink="/principal/user/{{ mod.id }}">{{ mod.id }}</a></th>
-              <th style="font-family: monospace; text-align: center;" scope="row"><a routerLink="/principal/user/{{ mod.id }}">{{ mod.name }}</a></th>
-              <td style="font-family: monospace;" scope="row">{{ mod.real_name }}</td>
-              <td style="font-family: monospace;" scope="row">{{ mod.id_asociacion }}</td>
-              <td style="font-family: monospace;" scope="row">{{ mod.email }}</td>
+            <tr *ngFor="let miembro of moderadores">
+              <td>{{ miembro.id }}</td>
+              <td>{{ miembro.name }}</td>
+              <td>{{ miembro.real_name }}</td>
+              <td>{{ miembro.email }}</td>
+              <td>{{ miembro.id_asociacion }}</td>
               <td>
                 <span class="d-flex justify-content-center">
-                  <a title="Editar" routerLink="./updateMod/{{ mod.id }}">
+                  <a title="Editar" routerLink="/panel/adminUser/updateUser/{{ miembro.id }}">
                     <i class="fas fa-edit"></i>
                   </a>
                 </span>
@@ -49,10 +50,8 @@
                 </span>
               </td>
             </tr>
-            <tr>
           </tbody>
         </table>
-
       </div>
 
       <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
