--- a/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
+++ b/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
@@ -7,9 +7,9 @@
   </div>
 
   <!--TABLA-->
-  <div class="row mt-2 mb-2 min-vw-90">
+  <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
 
-    <table class="table table-hover table-bordered">
+    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
       <thead class="table-dark">
         <tr>
           <th scope="col">Nº Anilla</th>
@@ -17,7 +17,9 @@
           <th scope="col">Fª de Nacimiento</th>
           <th scope="col">Nº Anilla Padre</th>
           <th scope="col">Nº Anilla Madre</th>
-          <th scope="col" colspan="3">Acciones</th>
+          <th scope="col">Editar</th>
+          <th scope="col">Intercambiar</th>
+          <th scope="col">Borrar</th>
         </tr>
       </thead>
       <tbody>
@@ -50,20 +52,7 @@
             </span>
           </td>
         </tr>
-        <tr>
       </tbody>
     </table>
-
-  </div>
-
-  <div class="row">
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-      <div class="btn-group me-2" role="group" aria-label="First group">
-        <button type="button" class="btn btn-primary">1</button>
-        <button type="button" class="btn btn-primary">2</button>
-        <button type="button" class="btn btn-primary">3</button>
-        <button type="button" class="btn btn-primary">4</button>
-      </div>
-    </div>
   </div>
 </div>
