--- a/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
@@ -14,24 +14,25 @@
       </div>
 
       <!--TABLA-->
-      <div class="row mt-2 mb-2 min-vw-90">
+      <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
 
-        <table class="table table-hover table-bordered">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
           <thead class="table-dark">
             <tr>
               <th scope="col">#ID</th>
               <th scope="col">Nombre</th>
               <th scope="col">ID Moderador</th>
               <th scope="col">Fª Creación</th>
-              <th scope="col" colspan="2">Acciones</th>
+              <th scope="col">Editar</th>
+              <th scope="col">Borrar</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let asoc of asociaciones">
               <th style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.id }}</a></th>
               <td style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.nombre }}</a></td>
-              <td style="font-family: monospace;" scope="row">{{ asoc.id_mod }}</td>
-              <td style="font-family: monospace;" scope="row">{{ (asoc.created_at).split('.')[0] }}</td>
+              <td>{{ asoc.id_mod}}</td>
+              <td>{{ asoc.created_at }}</td>
               <td>
                 <span class="d-flex justify-content-center">
                   <a title="Editar" routerLink="./updateAsoc/{{ asoc.id }}">
@@ -47,10 +48,8 @@
                 </span>
               </td>
             </tr>
-            <tr>
           </tbody>
         </table>
-
       </div>
 
       <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
