--- a/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
@@ -11,7 +11,8 @@
     <div class="container-fluid mt-3">
       <div class="row mr-3 d-flex justify-content-end">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button routerLink="./registerUser" type="button" class="btn btn-success" style="padding: 0.2em 4em;">Alta</button>
+          <button routerLink="./registerUser" type="button" class="btn btn-success"
+            style="padding: 0.2em 4em;">Alta</button>
         </div>
       </div>
 
@@ -37,7 +38,7 @@
               <td>{{ miembro.email }}</td>
               <td>
                 <span class="d-flex justify-content-center">
-                  <a title="Editar" routerLink="/panel/adminPost/updatePost/{{ miembro.id }}">
+                  <a title="Editar" routerLink="/panel/adminUser/updateUser/{{ miembro.id }}">
                     <i class="fas fa-edit"></i>
                   </a>
                 </span>
@@ -53,12 +54,12 @@
           </tbody>
         </table>
       </div>
-</div>
+    </div>
 
-<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
-  <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
-</div>
+    <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+      <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
+    </div>
 
-<div class="row">
-  <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
-</div>
+    <div class="row">
+      <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
+    </div>
