--- a/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
+++ b/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
@@ -46,10 +46,33 @@
           </td>
           <td>
             <span class="d-flex justify-content-center">
-              <a title="Borrar" routerLink="">
+              <!-- Button trigger modal -->
+              <button type="button" class="btn" data-toggle="modal" [attr.data-target]="'#modalBorrar'+canario.id">
                 <i class="fas fa-trash"></i>
-              </a>
+              </button>
             </span>
+
+            <!-- Modal -->
+            <div class="modal fade" id="modalBorrar{{ canario.id }}" tabindex="-1" role="dialog"
+              aria-labelledby="ModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ¿Está seguro de dar de baja a {{ canario.anilla }}?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger" (click)="borrar(canario.id)">Borrar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </td>
         </tr>
       </tbody>
