--- a/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
@@ -32,8 +32,8 @@
             <tr *ngFor="let pub of publicaciones">
               <td>{{ pub.id }}</td>
               <td>{{ pub.titulo }}</td>
-              <td>{{ pub.publicado }}</td>
-              <td>{{ pub.editado }}</td>
+              <td>{{ pub.created_at}}</td>
+              <td>{{ pub.updated_at}}</td>
               <td>
                 <span class="d-flex justify-content-center">
                   <a title="Editar" routerLink="/panel/adminPost/updatePost/{{ pub.id }}">
@@ -43,10 +43,33 @@
               </td>
               <td>
                 <span class="d-flex justify-content-center">
-                  <a title="Borrar" routerLink="">
+                  <!-- Button trigger modal -->
+                  <button type="button" class="btn" data-toggle="modal" [attr.data-target]="'#modalBorrar'+pub.id">
                     <i class="fas fa-trash"></i>
-                  </a>
+                  </button>
                 </span>
+
+                <!-- Modal -->
+                <div class="modal fade" id="modalBorrar{{ pub.id }}" tabindex="-1" role="dialog"
+                  aria-labelledby="ModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        ¿Está seguro de dar de baja a {{ pub.titulo}}?
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-danger" (click)="borrar(pub.id)">Borrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </td>
             </tr>
           </tbody>
