--- a/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
@@ -45,10 +45,33 @@
               </td>
               <td>
                 <span class="d-flex justify-content-center">
-                  <a title="Borrar" routerLink="">
+                  <!-- Button trigger modal -->
+                  <button type="button" class="btn" data-toggle="modal" [attr.data-target]="'#modalBorrar'+miembro.id">
                     <i class="fas fa-trash"></i>
-                  </a>
+                  </button>
                 </span>
+
+                <!-- Modal -->
+                <div class="modal fade" id="modalBorrar{{ miembro.id }}" tabindex="-1" role="dialog"
+                  aria-labelledby="ModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        ¿Está seguro de dar de baja a {{ miembro.real_name}}?
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-danger" (click)="borrar(miembro.id)">Borrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </td>
             </tr>
           </tbody>
