--- a/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
@@ -17,7 +17,7 @@
       <!--TABLA-->
       <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
 
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+        <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
           <thead class="table-dark">
             <tr>
               <th>#ID</th>
@@ -74,6 +74,9 @@
             </tr>
           </tbody>
         </table>
+
+        <app-loader id="loader"></app-loader>
+
       </div>
     </div>
   </div>
