--- a/src/app/GrupoFormularios/Creates/formulario-nuevo-usuario/formulario-nuevo-usuario.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nuevo-usuario/formulario-nuevo-usuario.component.html
@@ -7,6 +7,17 @@
 <!--Formulario-->
 <div class="row mh-50 h-50 d-flex justify-content-center align-center">
   <div class="col-10 d-flex flex-column justify-content-center">
+
+    <div class="alert alert-success" style="display: none;" role="alert">
+      Moderador creado con exito
+    </div>
+    <div class="alert alert-danger" style="display: none;" role="alert">
+      ¡Ha ocurrido un error!
+    </div>
+    <div>
+      <h3>Crear Moderador</h3>
+    </div>
+
     <div>
       <h3>Crear Usuario</h3>
     </div>
