--- a/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
       <div class="col p-4">
-        <table class="table table-hover table-bordered">
+        <table class="table table-hover table-bordered info-t">
           <tbody>
             <tr>
               <td scope="row"><b>ID Moderador:</b> {{ asoc.id_mod }}</td>
