--- a/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
+++ b/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
@@ -31,8 +31,8 @@
           </thead>
           <tbody>
             <tr *ngFor="let miembro of moderadores">
-              <td>{{ miembro.id }}</td>
-              <td>{{ miembro.name }}</td>
+              <th style="font-family: monospace;" scope="row"><a routerLink="/principal/user/{{ miembro.id }}">{{ miembro.id }}</a></th>
+              <td style="font-family: monospace;" scope="row"><a routerLink="/principal/user/{{ miembro.id }}">{{ miembro.name }}</a></td>
               <td>{{ miembro.real_name }}</td>
               <td>{{ miembro.email }}</td>
               <td>{{ miembro.id_asociacion }}</td>
