--- a/src/app/GrupoGeneral/navbar/navbar.component.html
+++ b/src/app/GrupoGeneral/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light darkblue-bg-snowmasher">
   <div class="container-fluid d-flex align-center">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -12,16 +13,31 @@
           <a class="nav-link text-white" href="/canarios">Mis Canarios</a>
         </li>
       </ul>
+      <!--
       <form class="d-flex m">
         <input class="form-control me-2 mt-1 ml-5" type="search" placeholder="Buscar usuario" aria-label="Search">
         <input class="btn btn-outline-light ml-2" type="button" value="Buscar">
       </form>
+      -->
+
+      <form class="ml-4">
+          <input type="text" placeholder="Usuario" [formControl]="myControl"
+            [matAutocomplete]="auto">
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let u of filteredOptions | async" [value]="u">
+              <a routerLink="/principal/user/{{ u }}" >{{ u }}</a>
+            </mat-option>
+          </mat-autocomplete>
+      </form>
+
 
       <a class="nav-link text-white userNavLink" href="/panel">
         <span>
-          <a class="text-white mr-5" style="font-size: smaller;" routerLink="/loggedout" (click)="logout()">Cerrar sesión</a>
+          <a class="text-white mr-5" style="font-size: smaller;" routerLink="/loggedout" (click)="logout()">Cerrar
+            sesión</a>
           {{ user.name }}
-          <img class="img rounded-circle" style="height: 3rem;" src="../../assets/img/icons/usuario.png" alt="Imagen del usuario">
+          <img class="img rounded-circle" style="height: 3rem;" src="../../assets/img/icons/usuario.png"
+            alt="Imagen del usuario">
         </span>
       </a>
     </div>
