--- a/src/app/GrupoGeneral/navbar/navbar.component.html
+++ b/src/app/GrupoGeneral/navbar/navbar.component.html
@@ -25,7 +25,7 @@
             [matAutocomplete]="auto">
           <mat-autocomplete #auto="matAutocomplete">
             <mat-option *ngFor="let u of filteredOptions | async" [value]="u">
-              <a routerLink="/principal/user/{{ u }}" >{{ u }}</a>
+              <a routerLink="/principal/user/{{ u.split('#')[1] }}" >{{ u.split('#')[0] }}</a>
             </mat-option>
           </mat-autocomplete>
       </form>
