Preparando y arreglando formularios y rutas

--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-6 d-flex justify-content-end">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Editar</button>
+          <button type="button" style="border: 1px solid var(--blue);" routerLink="../update/{{ canario.id }}" class="btn btn-table-ee">Editar</button>
           <button type="button" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Intercambiar</button>
           <button type="button" class="btn btn-danger">Baja</button>
         </div>
