--- a/src/app/GrupoFormularios/Updates/update-mod/update-mod.component.html
+++ b/src/app/GrupoFormularios/Updates/update-mod/update-mod.component.html
@@ -7,6 +7,14 @@
 <!--Formulario-->
 <div class="row mh-50 h-50 d-flex justify-content-center align-center">
   <div class="col-10 d-flex flex-column justify-content-center">
+
+    <div class="alert alert-success" style="display: none;" role="alert">
+      Post editado con exito
+    </div>
+    <div class="alert alert-danger" style="display: none;" role="alert">
+      ¡Ha ocurrido un error!
+    </div>
+
     <div>
       <h3>Editar Moderador</h3>
     </div>
