--- a/src/app/GrupoFormularios/Creates/formulario-nueva-asociacion/formulario-nueva-asociacion.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nueva-asociacion/formulario-nueva-asociacion.component.html
@@ -9,13 +9,10 @@
   <div class="col-10 d-flex flex-column justify-content-center">
 
     <div class="alert alert-success" style="display: none;" role="alert">
-      Moderador creado con exito
+      Asociación creado con exito
     </div>
     <div class="alert alert-danger" style="display: none;" role="alert">
       ¡Ha ocurrido un error!
-    </div>
-    <div>
-      <h3>Crear Moderador</h3>
     </div>
 
     <div>
@@ -25,6 +22,9 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
       <div class="mb-3">
         <input class="form-control" formControlName="nombre" type="text" placeholder="Nombre de asociación...">
+      </div>
+      <div class="mb-3">
+        <input class="form-control" formControlName="url_img" type="text" placeholder="URL de imagen...">
       </div>
       <div class="mb-3">
         <select  formControlName="id_mod" class="browser-default custom-select">
