--- a/src/app/GrupoFormularios/Creates/formulario-nuevo-post/formulario-nuevo-post.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nuevo-post/formulario-nuevo-post.component.html
@@ -9,13 +9,10 @@
   <div class="col-10 d-flex flex-column justify-content-center">
 
     <div class="alert alert-success" style="display: none;" role="alert">
-      Moderador creado con exito
+      Post creado con exito
     </div>
     <div class="alert alert-danger" style="display: none;" role="alert">
       ¡Ha ocurrido un error!
-    </div>
-    <div>
-      <h3>Crear Moderador</h3>
     </div>
 
     <div>
@@ -25,6 +22,9 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
       <div class="mb-3">
         <input class="form-control" formControlName="titulo" type="text" placeholder="Título">
+      </div>
+      <div class="mb-3">
+        <input class="form-control" formControlName="url_img" type="text" placeholder="URL de imagen">
       </div>
       <div class="mb-3">
         <textarea class="form-control rounded-0" formControlName="contenido" rows="10" placeholder="Contenido ..."></textarea>
