--- a/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
+++ b/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
@@ -7,6 +7,14 @@
 <!--Formulario-->
 <div class="row mh-50 h-50 d-flex justify-content-center align-center">
   <div class="col-10 d-flex flex-column justify-content-center">
+
+    <div class="alert alert-success" style="display: none;" role="alert">
+      Post editado con exito
+    </div>
+    <div class="alert alert-danger" style="display: none;" role="alert">
+      ¡Ha ocurrido un error!
+    </div>
+
     <div>
       <h3>Editar Canario</h3>
     </div>
@@ -18,6 +26,10 @@
           <option selected value="{{ canario.id_usuario }}"> {{ canario.id_usuario }} {{nombreUsuario}}</option>
           <option *ngFor="let usr of usuarios_disponibles" value="{{ usr.id }}"> {{ usr.id }} {{ usr.name }} </option>
         </select>
+      </div>
+      <div class="mb-3">
+        <label for="nombre">URL de Imagen:</label>
+        <input class="form-control" id="nombre" formControlName="url_img" [(ngModel)]="canario.url_img" type="text" placeholder="URL de Imagen" value="{{ canario.url_img }}">
       </div>
       <div class="mb-3">
         <label for="sexo">Sexo</label>
