Arreglos alerts e imagenes canarios

--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -51,9 +51,14 @@
       </div>
       <div class="col-6 p-4">
         <div>
-          <div style="background-color: cornsilk; width: 28em; height: 24em; margin: 10px; text-align: center;">
-            <p>IMAGEN CANARIO</p>
+
+          <div style="width: 28em; height: 24em; margin: 10px; text-align: center;">
+            <img class="img img-responsive img-thumbnail" style="max-height: 100%;" src="{{ canario.url_img }}">
           </div>
+
+          <!-- <div style="background-color: cornsilk; width: 28em; height: 24em; margin: 10px; text-align: center;">
+            <p>IMAGEN CANARIO</p>
+          </div> -->
         </div>
       </div>
     </div>
