--- a/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
+++ b/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
@@ -9,7 +9,7 @@
   <div class="col-10 d-flex flex-column justify-content-center">
 
     <div class="alert alert-success" style="display: none;" role="alert">
-      Post editado con exito
+      Canario editado con exito
     </div>
     <div class="alert alert-danger" style="display: none;" role="alert">
       ¡Ha ocurrido un error!
@@ -20,13 +20,13 @@
     </div>
     <!--Campos del formulario-->
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <label for="id_usuario">ID Usuario</label>
         <select class="form-control custom-select" id="id_usuario" formControlName="id_usuario" [(ngModel)]="canario.id_usuario">
           <option selected value="{{ canario.id_usuario }}"> {{ canario.id_usuario }} {{nombreUsuario}}</option>
           <option *ngFor="let usr of usuarios_disponibles" value="{{ usr.id }}"> {{ usr.id }} {{ usr.name }} </option>
         </select>
-      </div>
+      </div> -->
       <div class="mb-3">
         <label for="nombre">URL de Imagen:</label>
         <input class="form-control" id="nombre" formControlName="url_img" [(ngModel)]="canario.url_img" type="text" placeholder="URL de Imagen" value="{{ canario.url_img }}">
