--- a/src/app/GrupoFormularios/Creates/formulario-nueva-asociacion/formulario-nueva-asociacion.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nueva-asociacion/formulario-nueva-asociacion.component.html
@@ -9,7 +9,7 @@
   <div class="col-10 d-flex flex-column justify-content-center">
 
     <div class="alert alert-success" style="display: none;" role="alert">
-      Asociación creado con exito
+      Asociación creada con exito
     </div>
     <div class="alert alert-danger" style="display: none;" role="alert">
       ¡Ha ocurrido un error!
