--- a/src/app/GrupoFormularios/Creates/formulario-nuevo-usuario/formulario-nuevo-usuario.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nuevo-usuario/formulario-nuevo-usuario.component.html
@@ -9,7 +9,7 @@
   <div class="col-10 d-flex flex-column justify-content-center">
 
     <div class="alert alert-success" style="display: none;" role="alert">
-      Moderador creado con exito
+      Usuario creado con exito
     </div>
     <div class="alert alert-danger" style="display: none;" role="alert">
       ¡Ha ocurrido un error!
