Arreglando fecha canario

--- a/src/app/GrupoGeneral/info-bar/info-bar.component.html
+++ b/src/app/GrupoGeneral/info-bar/info-bar.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid blue-bg-snowmasher d-flex">
-  <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
+  <!-- <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
     <p>IMAGEN ASOCIACION</p>
+  </div> -->
+  <div style="width: 28em; height: 24em; margin: 10px; text-align: center;">
+    <img class="img img-responsive img-thumbnail" style="max-height: 100%;" src="{{ asociacion.url_img }}">
   </div>
   <div class="col" style="margin: 10px;">
     <h4 class="text-white">{{ asociacion.nombre }}</h4>
