--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -14,9 +14,14 @@
       </div>
       <div class="col-6 d-flex justify-content-end">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" style="border: 1px solid var(--blue);" routerLink="../update/{{ canario.id }}" class="btn btn-table-ee">Editar</button>
+          <button type="button" style="border: 1px solid var(--blue);" routerLink="../update/{{ canario.id }}"
+            class="btn btn-table-ee">Editar</button>
           <button type="button" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Intercambiar</button>
-          <button type="button" class="btn btn-danger">Baja</button>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-danger" data-toggle="modal"
+            [attr.data-target]="'#modalBorrar'+canario.id">
+            Borrar
+          </button>
         </div>
       </div>
     </div>
@@ -37,10 +42,10 @@
               <td scope="row"><b>Fª de nacimiento:</b> {{ canario.nacimiento }}</td>
             </tr>
             <tr>
-              <td scope="row"><b>Fª de creación:</b> {{ canario.creacion }}</td>
+              <td scope="row"><b>Fª de creación:</b> {{ canario.creacion | date: 'yyyy-MM-dd  HH:mm' }}</td>
             </tr>
             <tr>
-              <td scope="row"><b>Fª última modificación:</b> {{ canario.modificacion }}</td>
+              <td scope="row"><b>Fª última modificación:</b> {{ canario.modificacion | date: 'yyyy-MM-dd  HH:mm' }}</td>
             </tr>
             <tr>
               <td scope="row"><b>Fª de baja:</b> {{ canario.baja }}</td>
@@ -49,6 +54,29 @@
           </tbody>
         </table>
       </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="modalBorrar{{ canario.id }}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ¿Está seguro de dar de baja a {{ canario.anilla }}?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+              <button type="button" class="btn btn-danger" (click)="borrar(canario.id)">Borrar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="col-6 p-4">
         <div>
 
