--- a/src/app/GrupoPrincipal/item-miembro/item-miembro.component.html
+++ b/src/app/GrupoPrincipal/item-miembro/item-miembro.component.html
@@ -5,7 +5,7 @@
       <p>Usuario</p>
     </div>
     <div class="col-3">
-      <img class="img rounded-circle" style="height: 5rem;" src="../../assets/img/icons/usuario.png" alt="Imagen del usuario">
+      <img class="img rounded-5" style="height: 5rem;" src="../../assets/img/icons/UsersAvatar/user.png" alt="Imagen del usuario">
     </div>
   </div>
 
@@ -16,7 +16,7 @@
         <p>Moderador</p>
       </div>
       <div class="col-3">
-        <img class="img rounded-circle" style="height: 5rem;" src="../../assets/img/icons/usuario.png" alt="Imagen del usuario">
+        <img class="img rounded-5" style="height: 5rem;" src="../../assets/img/icons/UsersAvatar/mod.png" alt="Imagen del usuario">
       </div>
     </div>
   </ng-template>
@@ -28,7 +28,7 @@
         <p>Aministrador</p>
       </div>
       <div class="col-3">
-        <img class="img rounded-circle" style="height: 5rem;" src="../../assets/img/icons/usuario.png" alt="Imagen del usuario">
+        <img class="img rounded-5" style="height: 5rem;" src="../../assets/img/icons/UsersAvatar/admin.png" alt="Imagen del usuario">
       </div>
     </div>
   </ng-template>
